--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "url": "https://github.com/PanJiaChen/vue-element-admin/issues"
   },
   "dependencies": {
+    "@babel/core": "^7.4.5",
     "axios": "0.18.0",
     "clipboard": "1.7.1",
     "codemirror": "5.39.2",
@@ -54,6 +55,7 @@
     "simplemde": "1.11.2",
     "sortablejs": "1.7.0",
     "vue": "2.5.17",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-count-to": "1.0.13",
     "vue-i18n": "7.3.2",
     "vue-print-nb": "^1.0.3",
@@ -87,7 +89,6 @@
     "friendly-errors-webpack-plugin": "1.7.0",
     "hash-sum": "1.0.2",
     "html-webpack-plugin": "4.0.0-alpha",
-    "husky": "0.14.3",
     "lint-staged": "7.2.2",
     "mini-css-extract-plugin": "0.4.1",
     "node-notifier": "5.2.1",
